contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ main p {
 main h1 {
   padding: 1rem 2vw 0.5rem 2vw;
   font-size: 1.5rem;
-  color: #BF926B;
+  color: #73574D;
   font-weight: 400;
 }
 main .hero {
