--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -45,8 +45,8 @@ main {
 	h1 {
         padding: 1rem 2vw .5rem 2vw; 
         font-size: 1.5rem; 
-        color: $secondaryColor;
-        font-weight: $lightWeight
+        color: $primaryColor;
+        font-weight: $lightWeight;
     }
     .hero {width: 100%;}
     .hero img {
